Remove jdk17 directory and add layer.xml manifest entry